# NLPCortexSQL

./: .gitignore  README.md  main.py  pyproject.toml
backend/: main.py
backend/agents/: multi_agent.py
backend/alembic/: env.py
backend/alembic/versions/: 8c9aceaa4a9f_initial_migration.py
backend/core/: auth.py  config.py
backend/db/: models.py  session.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/ScrollStack/: ScrollStack.css  ScrollStack.jsx
frontend/src/components/SoftAurora/: SoftAurora.css
frontend/src/components/TypewriterCode/: TypewriterCode.css  TypewriterCode.jsx
frontend/src/pages/: LandingPage.css  LandingPage.jsx
